CSS corrections for legibility on a black background

--- a/packages/aisl/src/styles.sass
+++ b/packages/aisl/src/styles.sass
@@ -43,6 +43,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body
   line-height: 1
+  background: #000000
+  color: #FFFFFF
 
 ol, ul
   list-style: none
